try to fix pb with dropdown menu when collapsed can't scroll

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -146,9 +146,9 @@ p {
 
 .scrollable-menu {
     height: auto;
-    max-height: 300px;
+    max-height: 90vh;
     overflow-x: hidden;
-    overflow-y: visible;
+    overflow-y: scroll;
 }
 
 /*.nav, .navbar-nav, .navbar-right {
@@ -227,6 +227,6 @@ input{
 }
 
 .navbar-fixed-top .navbar-collapse, .navbar-fixed-bottom .navbar-collapse {
-  max-height: 300px;
-  overflow-y: visible;
+  max-height: none;
+  /*overflow-y: visible;*/
 }
